--- a/custom/plugins/EightMylezRocks/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
+++ b/custom/plugins/EightMylezRocks/src/Resources/views/storefront/page/product-detail/buy-widget-form.html.twig
@@ -6,7 +6,10 @@
 	{# 
 		Der Text der angezeigt wird, während der Animation
 		mit einem unsichtbaren Element holen wir uns den Textbaustein an dieser Stelle
-		damit wir auf diesen mit JavaScript darauf zugreifen können.
+		damit wir auf diesen mit JavaScript zugreifen können.
+
+		Ich hab mich an der Stelle einem bereits vorhandenen Snippet bedient.
+		Ich weiß nicht ob es eine 
 	#}
 	<div class="btn-buy-animation invisbile">{{ "listing.boxAddProduct"|trans|sw_sanitize }}</div>
 {% endblock %}
