--- a/custom/plugins/EightMylezRocks/src/Resources/app/storefront/src/scss/btn-buy.scss
+++ b/custom/plugins/EightMylezRocks/src/Resources/app/storefront/src/scss/btn-buy.scss
@@ -1,3 +1,9 @@
-.putting-in-cart-animation {
-	background-color: $backgroundcolor;
+// .putting-in-cart-animation {
+	// background-color: $backgroundcolor;
+// }
+
+.btn-buy:disabled,
+.btn-buy[disabled] {
+	background-color: $eight_backgroundcolor;
+	color: white;
 }
